# story_master

./: .gitignore  notes.md  prompt.md  pyproject.toml  requirements.txt
src/story_master/: db_client.py  engine.py  llm_client.py  log.py  sandbox.py  settings.py
src/story_master/action_handling/: action.py  action_handler.py  context_manager.py  parameter.py
src/story_master/action_handling/actions/: action.py  action_factory.py
src/story_master/action_handling/providers/: location_id.py  new_character_description.py  (+6 more)
src/story_master/ai/: plan_generator.py  sim_ai_handler.py  sim_ai_router.py
src/story_master/debug/: create_memories.py
src/story_master/entities/: alignment.py  allignment.py  background.py  character.py  characteristics.py  classes.py  conditions.py  effects.py  event.py  feats.py  inventory.py  items.py  location.py  memory.py  perks.py  races.py  sim.py  traits.py
src/story_master/generators/: make_observation.py
src/story_master/graphs/: fight_actions.py
src/story_master/logic/: entity_parser.py  fight_actions.py  lore_generator.py  skill_checks.py  story_generator.py
src/story_master/memory/: database_manager.py  entity.py  location.py  registry.py  relation.py  scene.py  state.py
src/story_master/phases/: exploration.py  game_start.py
src/story_master/sim_agent/: action_graph.py  action_router.py  action_selection_router.py  actions.py  planning_router.py  tools.py
src/story_master/storage/: storage_manager.py  storage_models.py  summary.py
src/story_master/tools/: safe_throws.py
src/story_master/utils/: selection.py
(+59 files in other folders)
