[project]
name = "story_master"
version = "2025.04.16"
requires-python = ">= 3.11"

dependencies = [
    "httpx",
    "pydantic",
    "pydantic-settings",
    "langchain",
    "langchain-ollama",
    "langchain-community",
    "langgraph",
    "chromadb",
    "langchain-chroma>=0.2.3",
    "ruff>=0.11.6",
    "defusedxml>=0.7.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/story_master"]
